--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,14 +3,13 @@ project:
   output-dir: docs
 
 website:
-  title: "Learning Security - Themes"
+  title: "Learning Azure Cloud Security - Themes"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
-      - href: cyber-security.qmd
-        text: Cyber Security
+      - azure-active-directory.qmd
 
 format:
   html:
